[workspace.package]
license = "MIT-0"
authors = ["Parity Technologies <admin@parity.io>"]
homepage = "https://paritytech.github.io/polkadot-sdk/"
repository = "https://github.com/paritytech/polkadot-sdk-parachain-template.git"
edition = "2021"

[workspace]
members = [
    "node",
    "pallets/nft-marketplace",
    "pallets/xcavate-whitelist",
    "pallets/property-governance",
    "pallets/property-management",
    "runtime",
]
resolver = "2"

[workspace.dependencies]
parachain-template-runtime = { path = "./runtime", default-features = false }
clap = { version = "4.5.3" }
codec = { version = "3.6.12", default-features = false, package = "parity-scale-codec" }
color-print = { version = "0.3.4" }
cumulus-client-cli = { version = "0.22.0", default-features = false }
cumulus-client-collator = { version = "0.22.0", default-features = false }
cumulus-client-consensus-aura = { version = "0.22.0", default-features = false }
cumulus-client-consensus-common = { version = "0.22.0", default-features = false }
cumulus-client-consensus-proposer = { version = "0.19.0", default-features = false }
cumulus-client-service = { version = "0.23.0", default-features = false }
cumulus-primitives-core = { version = "0.18.1", default-features = false }
cumulus-primitives-parachain-inherent = { version = "0.18.1", default-features = false }
cumulus-relay-chain-interface = { version = "0.22.0", default-features = false }
docify = { version = "0.2.8" }
frame-benchmarking = { version = "40.2.0", default-features = false }
frame-benchmarking-cli = { version = "47.2.0", default-features = false }
futures = { version = "0.3.30" }
jsonrpsee = { version = "0.24.7" }
log = { version = "0.4.21", default-features = false }
pallet-transaction-payment-rpc = { version = "43.0.0", default-features = false }
polkadot-cli = { version = "23.0.0", default-features = false }
polkadot-primitives = { version = "18.1.0", default-features = false }
prometheus-endpoint = { version = "0.17.2", default-features = false, package = "substrate-prometheus-endpoint" }
sc-basic-authorship = { version = "0.49.0", default-features = false }
sc-chain-spec = { version = "42.0.0", default-features = false }
sc-cli = { version = "0.51.0", default-features = false }
sc-client-api = { version = "39.0.0", default-features = false }
sc-consensus = { version = "0.48.0", default-features = false }
sc-executor = { version = "0.42.0", default-features = false }
sc-network = { version = "0.49.1", default-features = false }
sc-network-sync = { version = "0.48.0", default-features = false }
sc-offchain = { version = "44.0.0", default-features = false }
sc-rpc = { version = "44.0.0", default-features = false }
sc-service = { version = "0.50.0", default-features = false }
sc-sysinfo = { version = "42.0.0", default-features = false }
sc-telemetry = { version = "28.1.0", default-features = false }
sc-tracing = { version = "39.0.0", default-features = false }
sc-transaction-pool = { version = "39.0.0", default-features = false }
sc-transaction-pool-api = { version = "39.0.0", default-features = false }
serde = { version = "1.0.197", default-features = false }
serde_json = { version = "1.0.114", default-features = false }
sp-api = { version = "36.0.1", default-features = false }
sp-block-builder = { version = "36.0.0", default-features = false }
sp-blockchain = { version = "39.0.0", default-features = false }
sp-consensus-aura = { version = "0.42.0", default-features = false }
sp-core = { version = "36.1.0", default-features = false }
sp-io = { version = "40.0.1", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
sp-keystore = { version = "0.42.0", default-features = false }
sp-runtime = { version = "41.1.0", default-features = false }
sp-timestamp = { version = "36.0.0", default-features = false }
substrate-frame-rpc-system = { version = "43.0.0", default-features = false }
xcm = { version = "16.2.0", default-features = false, package = "staging-xcm" }
substrate-build-script-utils = { version = "11.0.0", default-features = false }
cumulus-pallet-aura-ext = { version = "0.20.0", default-features = false }
cumulus-pallet-parachain-system = { version = "0.20.0", default-features = false }
cumulus-pallet-session-benchmarking = { version = "21.0.0", default-features = false }
cumulus-pallet-xcm = { version = "0.19.1", default-features = false }
cumulus-pallet-xcmp-queue = { version = "0.20.0", default-features = false }
cumulus-primitives-aura = { version = "0.17.0", default-features = false }
cumulus-primitives-storage-weight-reclaim = { version = "11.0.0", default-features = false }
cumulus-primitives-utility = { version = "0.20.0", default-features = false }
frame-executive = { version = "40.0.1", default-features = false }
frame-metadata-hash-extension = { version = "0.8.0", default-features = false }
frame-support = { version = "40.1.0", default-features = false }
frame-system = { version = "40.1.0", default-features = false }
frame-system-benchmarking = { version = "40.0.0", default-features = false }
frame-system-rpc-runtime-api = { version = "36.0.0", default-features = false }
frame-try-runtime = { version = "0.46.0", default-features = false }
hex-literal = { version = "0.4.1", default-features = false }
pallet-aura = { version = "39.0.0", default-features = false }
pallet-authorship = { version = "40.0.0", default-features = false }
pallet-balances = { version = "41.1.0", default-features = false }
pallet-collator-selection = { version = "21.0.0", default-features = false }
pallet-message-queue = { version = "43.1.0", default-features = false }
pallet-session = { version = "40.0.1", default-features = false }
pallet-sudo = { version = "40.0.0", default-features = false }
pallet-timestamp = { version = "39.0.0", default-features = false }
pallet-transaction-payment = { version = "40.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "40.0.0", default-features = false }
pallet-xcm = { version = "19.1.2", default-features = false }

pallet-multisig = { version = "40.1.0", default-features = false }
pallet-proxy = { version = "40.1.0", default-features = false }
pallet-utility = { version = "40.0.0", default-features = false }
pallet-assets = { version = "42.0.0", default-features = false }
pallet-assets-freezer = { version = "0.7.0", default-features = false }
pallet-nfts = { version = "34.1.0", default-features = false }
pallet-nft-fractionalization = { version = "23.0.0", default-features = false }
pallet-asset-tx-payment = { version = "40.0.0", default-features = false }

parachain-info = { version = "0.20.0", default-features = false, package = "staging-parachain-info" }
parachains-common = { version = "21.0.0", default-features = false }
polkadot-parachain-primitives = { version = "16.1.0", default-features = false }
polkadot-runtime-common = { version = "19.1.0", default-features = false }
scale-info = { version = "2.11.1", default-features = false }
smallvec = { version = "1.11.0", default-features = false }
sp-genesis-builder = { version = "0.17.0", default-features = false }
sp-inherents = { version = "36.0.0", default-features = false }
sp-offchain = { version = "36.0.0", default-features = false }
sp-session = { version = "38.1.0", default-features = false }
sp-transaction-pool = { version = "36.0.0", default-features = false }
sp-version = { version = "39.0.0", default-features = false }
xcm-builder = { version = "20.1.1", default-features = false, package = "staging-xcm-builder" }
xcm-executor = { version = "19.1.2", default-features = false, package = "staging-xcm-executor" }
substrate-wasm-builder = { version = "26.0.1", default-features = false }

# Local Dependencies
pallet-nft-marketplace = { path = "./pallets/nft-marketplace", default-features = false }
pallet-xcavate-whitelist = {  path = "./pallets/xcavate-whitelist", default-features = false }
pallet-property-management = {  path = "./pallets/property-management", default-features = false }
pallet-property-governance = {  path = "./pallets/property-governance", default-features = false }
