[package]
name = "pallet-property-governance"
version = "4.0.0-dev"
description = "The Xcavate pallet property governance"
authors = ["Xcavate Network"]
homepage = "https://xcavate.io"
edition = "2021"
license = "Apache-2.0"
publish = false
repository = "https://github.com/XcavateBlockchain/MarketplaceMVP_Substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true, features = ["derive"] }
scale-info         = { workspace = true, features = ["derive"] }
serde = { workspace = true, optional = true }
frame-benchmarking = { workspace = true, optional = true}
frame-support      = { workspace = true }
frame-system       = { workspace = true }
sp-api = { workspace = true }

pallet-nfts = { workspace = true }
pallet-balances = { workspace = true }
pallet-assets = { workspace = true }
pallet-nft-fractionalization = { workspace = true }

# Local dependencies
pallet-xcavate-whitelist = { workspace = true }
pallet-nft-marketplace = { workspace = true }
pallet-property-management = { workspace = true }

[dev-dependencies]
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
primitives = { path = "../../primitives", default-features = false }
pallet-assets-holder = { workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"serde",
	"pallet-nfts/std",
	"pallet-xcavate-whitelist/std",
	"pallet-balances/std",
	"pallet-nft-marketplace/std",
	"pallet-assets/std",
	"pallet-nft-fractionalization/std",
	"pallet-property-management/std",
	"sp-api/std",
	"primitives/std",
	"pallet-assets-holder/std",
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]