[package]
name = "pallet-regions"
version = "4.0.0-dev"
description = "The Xcavate pallet regions"
authors = ["Xcavate Network"]
homepage = "https://xcavate.io"
edition = "2021"
license = "Apache-2.0"
publish = false
repository = "https://github.com/XcavateBlockchain/MarketplaceMVP_Substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = [
	"derive",
], workspace = true }
scale-info = { features = [
	"derive",
], workspace = true }

serde = { workspace = true, optional = true }
frame-benchmarking = { optional = true, workspace = true }
frame-support.workspace = true
frame-system.workspace = true
sp-runtime.workspace = true

pallet-nfts = { workspace = true }
pallet-balances = { workspace = true }

# Local dependencies
pallet-xcavate-whitelist = { workspace = true }

[dev-dependencies]
sp-core = { default-features = true, workspace = true }
sp-io = { default-features = true, workspace = true }

[features]
default = ["std"]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
std = [
	"codec/std",
	"scale-info/std",
	"serde",

	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",

	"sp-runtime/std",

    "pallet-nfts/std",
	"pallet-balances/std",

    "pallet-xcavate-whitelist/std",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
]
