[package]
name = "pallet-xcavate-whitelist"
version = "4.0.0-dev"
description = "The Xcavate pallet whitelist"
authors = ["Xcavate Network"]
homepage = "https://xcavate.io"
edition = "2021"
license = "Apache-2.0"
publish = false
repository = "https://github.com/XcavateBlockchain/MarketplaceMVP_Substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true, features = ["derive"] }
scale-info         = { workspace = true, features = ["derive"] }

serde = { workspace = true, optional = true }
frame-benchmarking = { workspace = true, optional = true}
frame-support      = { workspace = true }
frame-system       = { workspace = true }

[dev-dependencies]
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"serde",
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
